--- a/index.html
+++ b/index.html
@@ -5,10 +5,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Codaí</title>
+    <title>Currículo Codaí</title>
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@600&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css" integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous"/>
+    <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css"
+        integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous" />
     <link rel="stylesheet" href="./CSS/bootstrap.css">
     <link rel="stylesheet" href="./CSS/styles.css">
 </head>
@@ -19,7 +20,7 @@
             <div class="offset-lg-3 col-md-3 col-lg-3 card-col">
                 <div class="card card-perfil">
                     <div class="img-card-perfil">
-                        <img src="./images/perfil.jpg" alt="Foto de Perfil" class="card-image mx-auto d-block">
+                        <img src="./images/image.png" alt="Foto de Perfil" class="card-image mx-auto d-block">
                     </div>
                     <div class="card-body" style="vertical-align: middle;">
                         <h5 class="card-title" style="text-align:center" id="nome-no-html">
@@ -29,7 +30,8 @@
                         </p>
                         <div class="botoes-card">
                             <button onclick="clicnosobre()" class="btn mr-1" id="btn-sobre">Sobre</button>
-                            <button onclick="clicnoprojetos()" class="btn ml-1 btn-card" id="btn-projeto">Projetos</button>
+                            <button onclick="clicnoprojetos()" class="btn ml-1 btn-card"
+                                id="btn-projeto">Projetos</button>
                         </div>
                         <div class="icon-redes-sociais">
                             <div class="links-redes-sociais mt-2">
@@ -55,16 +57,14 @@
                     <h1 class="title-text">Olá,</h1>
                     <h4 class="title-subtitle">Bem vindo ao meu currículo</h4>
                     <p>
-                        Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been
-                        the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley
-                        of type and scrambled it to make a type specimen book.
+                        I'm a paragraph. Click here to add your own text and edit me. It’s easy. Just click “Edit Text”
+                        or double click me to add your own content and make changes to the font. 
                     </p>
                     <p>
-                        It has survived not only five centuries, but also the leap into electronic typesetting,
-                        remaining essentially unchanged.
+                        I’m a great place for you to tell a story and let your users know a little more about you.
                     </p>
                 </div>
-                
+
                 <div class="text" id="texto-2">
                     <h1 class="title-text">Projetos</h1>
                     <h4 class="title-subtitle">Alguns projeto em que trabalhei</h4>
@@ -72,7 +72,7 @@
                         <a target="_blank" href="https://www.growdev.com.br">Site da GrowDev</a>
                     </p>
                     <p>
-                        - Este site foi desenvolvido em ReactJS.
+                        Este site foi desenvolvido em ReactJS.
                     </p>
                 </div>
             </div>
@@ -82,38 +82,39 @@
         <div class="row" id="footer-elementos">
             <div class="col-md-3 col-lg-3">
                 <h4>Telefone</h4>
-                <p>(51) 99850-2395</p>
+                <p>(51) 99999-9999</p>
             </div>
             <div class="col-md-3 col-lg-3">
                 <div class="email">
                     <h4>E-mail</h4>
-                    <p>leticialealp@hotmail.com</p>
+                    <p>joao.silva@gmail.com</p>
                 </div>
             </div>
             <div class="col-md-3 col-lg-3">
                 <h4>Siga</h4>
                 <div class="links-redes-sociais"></div>
-                    <a href="#">
-                        <i class="fab fa-facebook"></i>
-                    </a>
-                    <a href="#">
-                        <i class="fab fa-twitter"></i>
-                    </a>
-                    <a href="#">
-                        <i class="fab fa-linkedin"></i>
-                    </a>
-                    <a href="#">
-                        <i class="fab fa-instagram"></i>
-                    </a>
+                <a href="#">
+                    <i class="fab fa-facebook"></i>
+                </a>
+                <a href="#">
+                    <i class="fab fa-twitter"></i>
+                </a>
+                <a href="#">
+                    <i class="fab fa-linkedin"></i>
+                </a>
+                <a href="#">
+                    <i class="fab fa-instagram"></i>
+                </a>
             </div>
         </div>
         <div class="row text-center mb-2">
             <div class="col-lg-12 col-md-12">
                 <small>©2021 growdev. All rights reserved <a href="#">GrowDev</a></small>
-            </div>   
+            </div>
         </div>
     </footer>
 
     <script src="./JS/index.js"></script>
 </body>
+
 </html>
