Alteração da cor dos links

--- a/index.html
+++ b/index.html
@@ -67,9 +67,9 @@
 
                 <div class="text" id="texto-2">
                     <h1 class="title-text">Projetos</h1>
-                    <h4 class="title-subtitle">Alguns projeto em que trabalhei</h4>
+                    <h4 class="title-subtitle">Alguns projeto em que trabalhei:</h4>
                     <p>
-                        <a target="_blank" href="https://www.growdev.com.br">Site da GrowDev</a>
+                        <a target="_blank" href="https://www.growdev.com.br" id="link-growdev">Site da GrowDev</a>
                     </p>
                     <p>
                         Este site foi desenvolvido em ReactJS.
@@ -109,7 +109,7 @@
         </div>
         <div class="row text-center mb-2">
             <div class="col-lg-12 col-md-12">
-                <small>©2021 growdev. All rights reserved <a href="#">GrowDev</a></small>
+                <small>©2021 growdev. All rights reserved <a href="#" id="link-growdev">GrowDev</a></small>
             </div>
         </div>
     </footer>
