--- a/index.html
+++ b/index.html
@@ -23,15 +23,12 @@
                         <img src="./images/image.png" alt="Foto de Perfil" class="card-image mx-auto d-block">
                     </div>
                     <div class="card-body" style="vertical-align: middle;">
-                        <h5 class="card-title" style="text-align:center" id="nome-no-html">
-                        </h5>
+                        <h5 class="card-title" style="text-align:center" id="nome-no-html"></h5>
                         <hr class="hr">
-                        <p class="text-center" id="cargo-no-html">
-                        </p>
+                        <p class="text-center" id="cargo-no-html"></p>
                         <div class="botoes-card">
                             <button onclick="clicnosobre()" class="btn mr-1" id="btn-sobre">Sobre</button>
-                            <button onclick="clicnoprojetos()" class="btn ml-1 btn-card"
-                                id="btn-projeto">Projetos</button>
+                            <button onclick="clicnoprojetos()" class="btn ml-1 btn-card" id="btn-projeto">Projetos</button>
                         </div>
                         <div class="icon-redes-sociais">
                             <div class="links-redes-sociais mt-2">
@@ -54,26 +51,19 @@
             </div>
             <div class="col-md-6 col-lg-6 text-body">
                 <div class="text" id="texto-1">
-                    <h1 class="title-text">Olá,</h1>
-                    <h4 class="title-subtitle">Bem vindo ao meu currículo</h4>
-                    <p>
-                        I'm a paragraph. Click here to add your own text and edit me. It’s easy. Just click “Edit Text”
-                        or double click me to add your own content and make changes to the font. 
-                    </p>
-                    <p>
-                        I’m a great place for you to tell a story and let your users know a little more about you.
-                    </p>
+                    <h1 class="title-text" id="titulo-1"></h1>
+                    <h4 class="title-subtitle" id="subtitulo-1"></h4>
+                    <p id="paragrafo-1"></p>
+                    <p id="paragrafo-2"></p>
                 </div>
 
                 <div class="text" id="texto-2">
-                    <h1 class="title-text">Projetos</h1>
-                    <h4 class="title-subtitle">Alguns projeto em que trabalhei:</h4>
+                    <h1 class="title-text" id="titulo-2"></h1>
+                    <h4 class="title-subtitle" id="subtitulo-2"></h4>
                     <p>
-                        <a target="_blank" href="https://www.growdev.com.br" id="link-growdev">Site da GrowDev</a>
+                        <a target="_blank" href="https://www.growdev.com.br" id="link-projeto"></a>
                     </p>
-                    <p>
-                        Este site foi desenvolvido em ReactJS.
-                    </p>
+                    <p id="descricao-projeto"></p>
                 </div>
             </div>
         </div>
@@ -82,12 +72,12 @@
         <div class="row" id="footer-elementos">
             <div class="col-md-3 col-lg-3">
                 <h4>Telefone</h4>
-                <p>(51) 99999-9999</p>
+                <p id="telefone-no-html"></p>
             </div>
             <div class="col-md-3 col-lg-3">
                 <div class="email">
                     <h4>E-mail</h4>
-                    <p>joao.silva@gmail.com</p>
+                    <p id="email-no-html"></p>
                 </div>
             </div>
             <div class="col-md-3 col-lg-3">
@@ -109,7 +99,9 @@
         </div>
         <div class="row text-center mb-2">
             <div class="col-lg-12 col-md-12">
-                <small>©2021 growdev. All rights reserved <a href="#" id="link-growdev">GrowDev</a></small>
+                <small>©2021 growdev. All rights reserved
+                    <a href="#" id="link-rodape"> GrowDev </a> 
+                </small>
             </div>
         </div>
     </footer>
