--- a/index.html
+++ b/index.html
@@ -32,16 +32,16 @@
                         </div>
                         <div class="icon-redes-sociais">
                             <div class="links-redes-sociais mt-2">
-                                <a href="#">
+                                <a target="_blank" href="https://www.facebook.com/">
                                     <i class="fab fa-facebook"></i>
                                 </a>
-                                <a href="#">
+                                <a target="_blank" href="https://twitter.com/">
                                     <i class="fab fa-twitter"></i>
                                 </a>
-                                <a href="#">
+                                <a target="_blank" href="https://br.linkedin.com/">
                                     <i class="fab fa-linkedin"></i>
                                 </a>
-                                <a href="#">
+                                <a target="_blank" href="https://www.instagram.com/">
                                     <i class="fab fa-instagram"></i>
                                 </a>
                             </div>
@@ -83,16 +83,16 @@
             <div class="col-md-3 col-lg-3">
                 <h4>Siga</h4>
                 <div class="links-redes-sociais"></div>
-                <a href="#">
+                <a target="_blank" href="https://www.facebook.com/">
                     <i class="fab fa-facebook"></i>
                 </a>
-                <a href="#">
+                <a target="_blank" href="https://twitter.com/">
                     <i class="fab fa-twitter"></i>
                 </a>
-                <a href="#">
+                <a target="_blank" href="https://br.linkedin.com/">
                     <i class="fab fa-linkedin"></i>
                 </a>
-                <a href="#">
+                <a target="_blank" href="https://www.instagram.com/">
                     <i class="fab fa-instagram"></i>
                 </a>
             </div>
