--- a/index.html
+++ b/index.html
@@ -100,7 +100,10 @@
         <div class="row text-center mb-2">
             <div class="col-lg-12 col-md-12">
                 <small>©2021 growdev. All rights reserved
-                    <a href="#" id="link-rodape"> GrowDev </a> 
+                    <a target="_blank" href="https://www.growdev.com.br" id="link-rodape">GrowDev</a> 
+                </small> 
+                <small>. Powered by
+                    <a target="_blank" href="https://www.umbler.com/" id="link-rodape">Umbler</a>
                 </small>
             </div>
         </div>
